--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "ethers": "^6.13.4",
+    "framer-motion": "^11.12.0",
     "googleapis": "^144.0.0",
     "lottie-web": "^5.12.2",
     "next": "15.0.3",
